[project]
name = "quantflow"
version = "0.5.0"
description = "quantitative analysis"
authors = [ { name = "Luca Sbardella", email = "luca@quantmind.com" } ]
license = "BSD-3-Clause"
readme = "readme.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "scipy>=1.14.1",
    "pydantic>=2.0.2",
    "ccy>=1.7.1",
    "python-dotenv>=1.0.1",
    "polars[pandas,pyarrow]>=1.11.0",
    "statsmodels>=0.14.6,<0.15.0",
]

[project.urls]
Homepage = "https://github.com/quantmind/quantflow"
Repository = "https://github.com/quantmind/quantflow"
Documentation = "https://quantmind.github.io/quantflow/"

[project.optional-dependencies]
ai = [
    "asciichartpy>=1.5.25",
    "ccy[holidays]>=1.7.1",
    "google-genai>=1.61.0",
    "mcp>=1.26.0",
    "openai>=2.16.0",
    "pydantic-ai-slim>=1.51.0",
    "rich>=13.9.4",
]
book = [
    "altair>=6.0.0",
    "autodocsumm>=0.2.14",
    "duckdb>=1.4.4",
    "fastapi>=0.129.0",
    "marimo>=0.19.7",
    "plotly>=6.2.0",
    "sympy>=1.12",
]
data = [ "aio-fluid[http]>=1.2.1" ]
dev = [
    "black>=26.3.1",
    "ghp-import>=2.0.2",
    "isort>=8.0.0",
    "mypy>=1.14.1",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.4",
    "types-python-dateutil>=2.9.0.20251115",
]
docs = [
    "griffe-pydantic>=1.1.0",
    "griffe-typingdoc>=0.2.7",
    "mkdocs-macros-plugin>=1.3.7",
    "mkdocs-material>=9.7.0",
    "mkdocs-redirects>=1.2.1",
    "mkdocstrings[python]==1.0.0",
]
ml = [
    "torch>=2.10.0",
]

[project.scripts]
qf = "quantflow.cli.script:main"
qf-mcp = "quantflow.ai.server:main"

[build-system]
requires = [ "hatchling" ]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = [ "packages/*" ]

[tool.uv.sources]
torch = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.jupytext.formats]
"notebooks/" = "ipynb,py:percent"

[tool.marimo.display]
theme = "dark"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [ "quantflow_tests" ]

[tool.isort]
profile = "black"

[tool.ruff]
lint.select = [ "E", "F" ]
line-length = 88

[tool.hatch.version]
path = "quantflow/__init__.py"

[tool.mypy]
# strict = true
disallow_untyped_calls = true
disallow_untyped_defs = true
warn_no_return = true

[[tool.mypy.overrides]]
module = [
    "asciichartpy.*",
    "cache.*",
    "quantflow_tests.*",
    "IPython.*",
    "pandas.*",
    "plotly.*",
    "scipy.*",
]
ignore_missing_imports = true
disallow_untyped_defs = false
