[project]
name = "quantflow"
version = "0.9.0"
description = "quantitative analysis"
authors = [
    { name = "Luca Sbardella", email = "luca@quantmind.com" },
]
license = "BSD-3-Clause"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Typing :: Typed",
]
keywords = [
    "finance",
    "options",
    "pricing",
    "quantitative",
    "stochastic",
    "volatility",
]
readme = "readme.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "scipy>=1.14.1",
    "pandas>=2.0.0",
    "pydantic>=2.0.2",
    "ccy>=2.0.0",
    "statsmodels>=0.14.6,<0.15.0",
]

[project.urls]
Homepage = "https://github.com/quantmind/quantflow"
Repository = "https://github.com/quantmind/quantflow"
Documentation = "https://quantflow.quantmind.com"
Issues = "https://github.com/quantmind/quantflow/issues"

[project.optional-dependencies]
data = [
    "aio-fluid[http]>=2.3.1",
]
ml = [
    "torch>=2.12.0",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "ghp-import>=2.0.2",
    "hypothesis>=6.152.2",
    "isort>=8.0.0",
    "mypy>=1.14.1",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=7.0.0",
    "python-dotenv>=1.0.1",
    "ruff>=0.15.4",
    "types-python-dateutil>=2.9.0.20251115",
]
docs = [
    "aio-fluid[http,log,k8s]>=2.3.1",
    "fastapi>=0.136.3",
    "griffe-pydantic>=1.1.0",
    "griffe-typingdoc>=0.2.7",
    "kaleido>=1.2.0",
    "mkdocs-macros-plugin>=1.3.7",
    "mkdocs-material>=9.7.0",
    "mkdocs-redirects>=1.2.1",
    "mkdocstrings[python]==1.0.0",
    "plotly>=6.2.0",
    "pyarrow>=19.0.0",
    "python-dotenv>=1.0.1",
]
research = [
    "ipython>=9.14.0",
]

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = [
    "packages/*",
]

[tool.uv.sources]
torch = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.jupytext.formats]
"notebooks/" = "ipynb,py:percent"

[tool.marimo.display]
theme = "dark"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "quantflow_tests",
]

[tool.coverage.run]
source = [
    "quantflow",
    "app",
]
omit = [
    "quantflow/utils/plot.py",
    "app/docs/*",
    "app/scripts/*",
]

[tool.coverage.report]
exclude_also = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.coverage.html]
directory = "build/coverage/html"

[tool.coverage.xml]
output = "build/coverage.xml"

[tool.isort]
profile = "black"

[tool.black]

[tool.ruff]
lint.select = [
    "E",
    "F",
]
line-length = 88

[tool.hatch.version]
path = "quantflow/__init__.py"

[tool.mypy]
# strict = true
disallow_untyped_calls = true
disallow_untyped_defs = true
warn_no_return = true
disable_error_code = [
    "prop-decorator",
]

[[tool.mypy.overrides]]
module = [
    "asciichartpy.*",
    "cache.*",
    "quantflow_tests.*",
    "IPython.*",
    "pandas.*",
    "plotly.*",
    "scipy.*",
    "statsmodels.*",
]
ignore_missing_imports = true
disallow_untyped_defs = false
